# hakkell.paper

./: .gitignore  LICENSE  README.md  benchprep.sh  cabal.project.freeze  default.nix  hakkell-paper.cabal  json-data.py  main.bib  main.lhs  main.tex  makefile  noprint.py  package.yaml  ring.tex  shell.nix
bench-mem/: memory.plt
bench-time/: time.plt
presentation-demo/: Actor.hs  Node.hs  Permute.hs  makefile
tex-sources/: group_channels-mean_svg-tex.pdf_tex  machine_c3.8xlarge-mean_svg-tex.pdf_tex  machine_c6a.48xlarge-mean_svg-tex.pdf_tex  machine_macbookpro11,5-mean_svg-tex.pdf_tex  main.bbl  main.bib  main.tex  total-allocated_svg-tex.pdf_tex
