cabal-version: 1.12

name:           hakkell-paper
version:        0.0.0
build-type:     Simple

executable main
  main-is: main.lhs
  other-modules:
      Paths_hakkell_paper
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , random
    , criterion
  default-language: Haskell2010

